--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 </div>
                 <div class="section_restaurants_cartes">
                     <article class="carte_restaurant">
-                        <a class=".section_restaurants_cartes__lien" href="./restaurants/menu-a-la-française.html">
+                        <a class=".section_restaurants_cartes__lien" href="./restaurants/menu-a-la-francaise.html">
                             <img class="carte_restaurant__image" src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo d'un plat du restaurant à la française">
                             <div class="carte_restaurant_bas">
                                 <h3 class="carte_restaurant_bas__nom">À la française</h3>
